--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function closeNav() {
                 <li><a href="#project-check">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#" data-toggle="modal" data-target="#myModal">About</a></li>
-                <li><a href="#contacts">Contact now</a></li>
+                <li><a href="#contacts">Contact</a></li>
             </ul>
             <div class="sayhi"><span style="font-size:25px;cursor:pointer" onclick="openNav()"><a href="#">Catch Me</a></span></div>
         </nav>
